--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Distributed Systems & Iot Research Lab
+title: AISIP-Applied Intelligent System and Information Processing.(Dr. Shamim's Lab)
 first_name: Hamed
 middle_name: 
 last_name: Khanmirza
