--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: AISIP-Applied Intelligent System and Information Processing.(Dr. Shamim's Lab)
-first_name: Hamed
+first_name: Jehadur
 middle_name: 
-last_name: Khanmirza
-email: 
+last_name: RE
+email: emran.jehadur@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -17,8 +17,8 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your 
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon:  # the emoji used as the favicon
-url:   https://jehadurre.github.io/aisip-lab # the base hostname & protocol for your site
-baseurl: #/al-folio # the subpath of your site, e.g. /blog/
+url:   https://jehadurre.github.io # the base hostname & protocol for your site
+baseurl: /aisip-lab #/al-folio # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
