--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: iot-kntu # your GitHub user name
+github_username: JehadurRE # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: hamedkh@gmail.com # your LinkedIn user name
@@ -64,7 +64,7 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: https://wp.kntu.ac.ir/h.khanmirza/ # work page URL
+work_url: https://aisip-lab.tech # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
