--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: JehadurRE # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: hamedkh@gmail.com # your LinkedIn user name
+linkedin_username: JehadurRE # your LinkedIn user name
 scholar_userid: muaBmQQAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
@@ -64,7 +64,7 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: https://aisip-lab.tech # work page URL
+work_url: # https://aisip-lab.tech # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
